crates/ink/tests/ui/contract/fail/trait-message-selector-overlap-1.stderr
error[E0119]: conflicting implementations of trait `DispatchableMessageInfo<1083895717>` for type `Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-1.rs:41:9
   |
36 |         fn message(&self) {}
   |         -- first implementation here
...
41 |         fn message(&self) {}
   |         ^^ conflicting implementation for `Contract`

error[E0119]: conflicting implementations of trait `TraitCallForwarderFor<1083895717>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-1.rs:39:5
   |
34 |     impl TraitDefinition1 for Contract {
   |     ---- first implementation here
...
39 |     impl TraitDefinition2 for Contract {
   |     ^^^^ conflicting implementation for `contract::_::CallBuilder`
